Repo Resync - Hatch / Hatchling added

--- a/example-projects/example-meson/pyproject.toml
+++ b/example-projects/example-meson/pyproject.toml
@@ -5,9 +5,9 @@ requires = [
 ]
 
 [project]
-name = "dummy-project"
+name = "dummy-project-meson"
 version = "0.0.1"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 
 [variant.default-priorities]
 namespace = ["fictional_hw", "fictional_tech"]
