--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,15 @@
+[submodule "example-projects/numpy"]
+path = example-projects/numpy
+url = ../numpy
+branch = wheel-variants
+
 [submodule "flit"]
 	path = flit
 	url = ../flit.git
+
+[submodule "hatch"]
+	path = hatch
+	url = ../hatch.git
 
 [submodule "meson-python"]
 	path = meson-python
@@ -12,11 +21,6 @@
 	url = ../mockhouse.git
 	branch = main
 
-[submodule "numpy"]
-	path = numpy
-	url = ../numpy
-	branch = wheel-variants
-
 [submodule "nvidia_variant_provider"]
 	path = nvidia_variant_provider
 	url = ../nvidia-variant-provider.git
@@ -26,6 +30,10 @@
 	path = pip
 	url = ../pip.git
 	branch = pep-xxx-wheel-variants
+
+[submodule "provider_example_dynamic(HW)/provider_fictional_hw/vendor/packaging"]
+	path = provider_example_dynamic(HW)/provider_fictional_hw/vendor/packaging
+	url = https://github.com/pypa/packaging.git
 
 [submodule "provider_variant_aarch64"]
 	path = provider_variant_aarch64
