--- a/example-projects/example-flit/sandbox-project-flit/pyproject.toml
+++ b/example-projects/example-flit/sandbox-project-flit/pyproject.toml
@@ -3,15 +3,17 @@ requires = ['flit_core >=3,<4']
 build-backend = 'flit_core.buildapi'
 
 [project]
-name = "dummy-project"
+name = "sandbox-project-flit"
+version = "0.0.1"
+description = "A dummy project for testing purposes"
 authors = [
     { name = "Jonathan Dekhtiar", email = "jonathan@dekhtiar.com" },
 ]
-dynamic = ["version", "description"]
+requires-python = ">=3.9"
 
 [variant.default-priorities]
  # the plugins corresponding to these namespaces will be auto-installed at installation
-namespace = ["fictional_hw", "fictional_tech"]  # optional - if empty nothing is auto-installed
+namespace = ["fictional_tech", "fictional_hw"]  # optional - if empty nothing is auto-installed
 feature = []                                    # optional - Can be skipped if empty - 95%+ packages won't ever need
 property = []                                   # optional - Can be skipped if empty - 95%+ packages won't ever need
 
