--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -17,7 +17,16 @@
                 "remote.autoForwardPorts": false,
                 "[python]": {
                     "analysis.autoImportCompletions": true,
+                    // https://github.com/microsoft/pylance-release/wiki/Pylance-Configuration-Tips
+                    "analysis.languageServerMode": "light",
+                    "analysis.typeCheckingMode": "basic",
                     "analysis.exclude": [
+                        "**/.mypy_cache",
+                        "**/.git",
+                        "**/.pytest_cache",
+                        "**/.ruff_cache",
+                        "**/.vscode",
+                        "**/.venv/",
                         "**/__pycache__",
                         "**/.*",
                         "**/*.egg-info",
@@ -28,10 +37,6 @@
                         "tutorials",
                         "variants-index"
                     ],
-                    "analysis.include": [
-                        "${workspaceFolder}/variantlib"
-                    ],
-                    "analysis.typeCheckingMode": "basic",
                     "defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
                     "editor.codeActionsOnSave": {
                         "source.organizeImports": "always"
