--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,19 @@
+[submodule "blas-lapack-variant-provider"]
+	path = blas-lapack-variant-provider
+	url = ../blas-lapack-variant-provider
+
 [submodule "example-projects/numpy"]
-path = example-projects/numpy
-url = ../numpy
-branch = wheel-variants
+	path = example-projects/numpy
+	url = ../numpy
+	branch = wheel-variants
+
+[submodule "example-projects/scikit-learn"]
+	path = example-projects/scikit-learn
+	url = ../scikit-learn
+
+[submodule "example-projects/scipy"]
+	path = example-projects/scipy
+	url = ../scipy
 
 [submodule "flit"]
 	path = flit
@@ -25,6 +37,14 @@ branch = wheel-variants
 	path = nvidia_variant_provider
 	url = ../nvidia-variant-provider.git
 	branch = master
+
+[submodule "openmp-variant-provider"]
+	path = openmp-variant-provider
+	url = ../openmp-variant-provider
+
+[submodule "packaging"]
+	path = packaging
+	url = ../packaging
 
 [submodule "pip"]
 	path = pip
