flit & Examples update to `v0.0.3``

--- a/example-projects/exampleA-flit/Makefile
+++ b/example-projects/exampleA-flit/Makefile
@@ -35,15 +35,18 @@ build: clean ## builds source and wheel package
 	flit build --format wheel --null-variant
 
 	flit build --format wheel \
+		--variant-label "mother_compute4" \
 		-p "fictional_hw :: architecture :: mother" \
 		-p "fictional_hw :: compute_capability :: 4"
 
 	flit build --format wheel \
+		--variant-label "autochef_r25_sup" \
 		-p "fictional_tech :: quantum :: superposition" \
 		-p "fictional_tech :: risk_exposure :: 25" \
 		-p "fictional_tech :: technology :: auto_chef"
 
 	flit build --format wheel \
+		--variant-label "dthought_c10_foam" \
 		-p "fictional_hw :: architecture :: deepthought" \
 		-p "fictional_hw :: compute_accuracy :: 10" \
 		-p "fictional_hw :: compute_capability :: 10" \
@@ -51,18 +54,23 @@ build: clean ## builds source and wheel package
 		-p "fictional_tech :: quantum :: foam"
 
 	flit build --format wheel \
+		--variant-label "tars_c8_funny" \
 		-p "fictional_hw :: architecture :: tars" \
 		-p "fictional_hw :: compute_accuracy :: 8" \
 		-p "fictional_hw :: compute_capability :: 8" \
 		-p "fictional_hw :: humor :: 10"
 
 	flit build --format wheel \
+		--variant-label "hal9k_c0_6_nfun" \
 		-p "fictional_hw :: architecture :: hal9000" \
 		-p "fictional_hw :: compute_accuracy :: 0" \
 		-p "fictional_hw :: compute_capability :: 6" \
 		-p "fictional_hw :: humor :: 2"
 
 	flit build --format wheel \
+		--variant-label "foam_r_e10_impro" \
 		-p "fictional_tech :: quantum :: foam" \
 		-p "fictional_tech :: risk_exposure :: 1000000000" \
 		-p "fictional_tech :: technology :: improb_drive"
+	
+	variantlib generate-index-json -d dist/
